# mini-cmake-qt

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: QtCommon.cmake
doc/: LensCorrection.md
src/: CrashDialog.cpp  CrashDialog.hpp  CrashHandler.cpp  CrashHandler.hpp  GuideStep.cpp  HistogramDialog.cpp  HistogramDialog.hpp  ImageContextMenu.cpp  ImageContextMenu.h  ImageDiffDialog.cpp  ImagePreviewDialog.cpp  ImagePreviewDialog.h  MetadataDialog.cpp  MetadataDialog.h  UpdateCheck.cpp  UpdateCheck.h  main.cpp  mainwindow.cpp  mainwindow.h
src/image/: BadPixel.cpp  BiasField.cpp  CTA.cpp  Calibration.cpp  Calibration.hpp  Convolve.cpp  Convolve.hpp  Crop.cpp  Crop.h  DarkField.cpp  Debayer.cpp  Denoise.cpp  Denoise.hpp  Diff.cpp  Diff.hpp  Exif.cpp  Exif.hpp  FWHM.cpp  FWHM.hpp  Filter.cpp  Filter.hpp  FlatField.cpp  Gradient.cpp  HDR.cpp  HFR.cpp  HFR.hpp  Histogram.cpp  Histogram.hpp  ImageIO.cpp  ImageIO.hpp  ImageUtils.cpp  ImageUtils.hpp  MetaData.cpp  MetaData.hpp  Negative.cpp  Noise.cpp  Noise.hpp  SIMDHelper.cpp  SIMDHelper.hpp  Sharpen.cpp  (+11 more)
src/image/astro/: AstroProcessor.cpp  AstroProcessor.hpp  BadPixel.cpp  BadPixel.hpp  BiasField.cpp  BiasField.hpp  DarkField.cpp  DarkField.hpp  FWHM.cpp  FWHM.hpp  FlatField.cpp  FlatField.hpp  HFR.cpp  HFR.hpp  Negative.cpp  Negative.h  ParallelConfig.hpp  StarDetector.cpp  StarDetector.hpp  StarMarker.cpp  StarMarker.hpp
src/image/steganograph/: CRC.cpp  CRC.hpp  Channels.cpp  Channels.hpp  LSB.cpp  LSB.hpp  MSB.cpp  MSB.hpp  QRCode.cpp  QRCode.hpp  Stego.cpp  Stego.hpp  StegoWindow.cpp  StegoWindow.hpp  WaterMark.cpp  WaterMark.hpp  main.cpp
src/json/: JsonEditor.cpp  JsonEditor.hpp  JsonModel.cpp  JsonModel.hpp  JsonSyntaxHighlighter.cpp  JsonSyntaxHighlighter.hpp
src/log/: LogAnalyzer.cpp  LogAnalyzer.hpp  LogChartModel.cpp  LogChartModel.hpp  LogFilterModel.cpp  LogFilterModel.hpp  LogPanel.cpp  LogPanel.hpp  LogSearchCompleter.cpp  LogSearchCompleter.hpp
src/ui/: CrashDialog.cpp  CropPreviewWidget.cpp  CropPreviewWidget.h  CropWidget.cpp  CropWidget.h  DiffWidget.cpp  DiffWidget.h  EffectPanel.hpp  FilterPanel.hpp  GuideStep.cpp  GuideStep.h  HistogramDialog.cpp  HistogramDialog.hpp  ImagePreviewDialog.cpp  MetadataDialog.cpp  MetadataDialog.h  StegoWidget.cpp  StegoWidget.hpp  UpdateCheck.cpp  UpdateCheck.h  UpdateDialog.cpp  UpdateDialog.h  VersionControlWidget.cpp  VersionControlWidget.h  VideoPreview.hpp  VideoProcessWidget.cpp  VideoProcessWidget.hpp
src/ui/components/: ResponseiveLayout.h
src/utils/: AppUpdater.cpp  AppUpdater.h  Concurrent.hpp  FolderWatcher.cpp  FolderWatcher.h  GeoLocation.cpp  MemoryPool.hpp  ShakeEffect.cpp  ShakeEffect.hpp  ThreadPool.cpp  ThreadPool.hpp  UpdateManager.h
src/version/: BranchManager.cpp  CMakeLists.txt  CacheManager.cpp  CacheManager.hpp  ImageOperations.cpp  MetadataManager.cpp  TagManager.cpp  VersionControl.cpp  VersionControl.hpp  VersionTypes.hpp
src/video/: CTA.cpp  VideoIO.cpp  VideoIO.hpp
src/video/analysis/: VideoAnalyzer.cpp  VideoAnalyzer.hpp
src/video/codec/: VideoCodec.cpp  VideoCodec.hpp
src/video/effects/: VideoEffects.cpp  VideoEffects.hpp
src/video/filters/: VideoFilters.cpp  VideoFilters.hpp
